Bug 139368 - Select database dialog isn't in focus when opened
Summary: Select database dialog isn't in focus when opened
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.1.0.1 rc
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0 target:7.1.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2021-01-02 08:55 UTC by Aron Budea
Modified: 2021-01-19 18:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
what I see (276.32 KB, image/png)
2021-01-18 14:20 UTC, Caolán McNamara
Details
Screenshot (not in focus) (92.31 KB, image/png)
2021-01-18 16:47 UTC, Aron Budea
Details
Screenshot (in focus) (98.28 KB, image/png)
2021-01-18 16:51 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2021-01-02 08:55:16 UTC
In the start center, choose Base Database.

=> The dialog isn't in focus (all the fields are greyed out).

Happens in Linux with gtk3 backend, but not with gen.

Bibisected to the following commit using repo bibisect-linux-64-7.1. Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=5a342bde16fb46c895eec302af73d7836226eccf
author		Caolán McNamara <caolanm@redhat.com>	2020-10-15 15:24:26 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-10-22 17:26:08 +0200

weld backing window
Comment 1 Robert Großkopf 2021-01-02 14:01:05 UTC
Couldn't confirm it with VCL: kf5
Haven't installed gtk3 at this moment.

Tested with LO 7.1.0.1 on OpenSUSE 15.2 64bit rpm Linux
Comment 2 Caolán McNamara 2021-01-18 14:20:16 UTC
Created attachment 168991 [details]
what I see

is this different to what you see. Is there a difference for you from launching from the start center vs launching soffice --base from the command line ?
Comment 3 Aron Budea 2021-01-18 16:47:32 UTC
Created attachment 168995 [details]
Screenshot (not in focus)

(In reply to Caolán McNamara from comment #2)
> is this different to what you see. Is there a difference for you from
> launching from the start center vs launching soffice --base from the command
> line ?
Yes, it's different, I'm attaching my screenshot.
When I launch --base, I get the Select database dialog, focused, without the start center showing in the background.
Comment 4 Aron Budea 2021-01-18 16:51:25 UTC
Created attachment 168996 [details]
Screenshot (in focus)

And this is what I see after I click into the dialog, this one is similar to yours.

Not the freshest build, 5adc93a9a9426ef79054751be2904896f787a8a2 in the bibisect repo is from a week ago (what I used for the screenshots), but I can also repro with 2e29dc20b96f2d96f5b64e9ed5efb79e342b3f54 from 3 days ago.
Comment 5 Caolán McNamara 2021-01-19 12:17:37 UTC
with 
GDK_BACKEND=x11
I can reproduce this.
Comment 6 Commit Notification 2021-01-19 14:25:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/98edfb02b2a755d9758bfac2374c0bc8dcebc504

tdf#139368 new database dialog doesn't have focus on start-center launch

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2021-01-19 14:29:20 UTC
that gives the desired results on master as far as I can see, backport to 7-1 in gerrit
Comment 8 Commit Notification 2021-01-19 18:53:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/06035cdc0e43ca53601a6f66c10b95ce4b4b26a8

tdf#139368 new database dialog doesn't have focus on start-center launch

It will be available in 7.1.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.