tdf#139368 new database dialog doesn't have focus on start-center launch

the original issue all the way back of

commit 82abd23f3ee1900b7579e5a0afa23581d5836f01
    tdf#93317 Modified Document Dialog misses focus on Gtk3

eventuallly solved with

commit 1092cc0c75f6d2ab649dd31b1db9f0a9f0944355
    Related: tdf#100337 revert x-crossplatform ToTop...

is possibly all redundant in the contemporary situation. Try using
gdk_x11_display_get_user_time for X where the problem arises and
leave things along in the apparently working wayland case

Change-Id: Ia31b88e2760574e1d580d4bff509b06c07e5f0f3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109630
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>