vcl/unx/gtk3/gtk3gtkframe.cxx
@@ -2010,10 +2010,16 @@ void GtkSalFrame::ToTop( SalFrameToTop nFlags )
         GrabFocus();
     else if( gtk_widget_get_mapped( m_pWindow ) )
     {
+        auto nTimestamp = GetLastInputEventTime();
+#ifdef GDK_WINDOWING_X11
+        GdkDisplay *pDisplay = GtkSalFrame::getGdkDisplay();
+        if (DLSYM_GDK_IS_X11_DISPLAY(pDisplay))
+            nTimestamp = gdk_x11_display_get_user_time(pDisplay);
+#endif
         if (!(nFlags & SalFrameToTop::GrabFocusOnly))
-            gtk_window_present_with_time(GTK_WINDOW(m_pWindow), GetLastInputEventTime());
+            gtk_window_present_with_time(GTK_WINDOW(m_pWindow), nTimestamp);
         else
-            gdk_window_focus(gtk_widget_get_window(m_pWindow), GetLastInputEventTime());
+            gdk_window_focus(gtk_widget_get_window(m_pWindow), nTimestamp);
         GrabFocus();
     }
     else
